fixing horizontal scroll bug

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,11 +23,12 @@ body {
 	background-color: #f0f2f5;
 	height: 100%;
 	width: 100%;
-}
-
-body {
 	overflow-x: hidden;
 }
+
+/* body {
+	overflow-x: hidden;
+} */
 
 a {
 	color: inherit;
